# SDE-Notes

./: .gitignore  .gitmodules  Heaps in Python.py  Interviews-QandA.ipynb  Object-Oriented Programming.py  Python Typing Module Complete Guide.py  Python concepts.py  Python data types.py  Python-syntax.py  README.md  SDE-Notes.ipynb  SQLAlchemy FastAPI.py  async and await.py  clean code.md  doubts  generator, iterator, Decorators. Closures, Higher-order functions, Lambda functions.py  graph dsa python.py  lists-py.ipynb  prompt-engg.py  queue dsa python.py  recursion.py  system-design  tree dsa.py
.github/: copilot-instructions.md
CS/: core areas.md  fundamentals of programming language.md  sophisticated algorithms and data structures.md
assembly/: roadmap.md
backend/: django-postgresql
c/: bitwise_operators_complete_guide.md  building blocks.md  exceptions.md  include guards.md  keywords.md  predefined identifier.md  syntax.md
cloud computing/: L4 vs L7 load balancers.md  compliance frameworks regulations.md  edge computing systems.md  event driven architecture.md  tdx sev.md  virtual private cloud.md  virtualization technologies.md
cloud native/: acme protocol.md  cert-manager and tetragon and harbor and kyverno.md  certificate authority.md  cloud and data-center infrastructure.md  cloud and data-center networking.md  cloud native cyber attacks.md  cloud native layers.md  containerd.md  crl ocsp.md  crossplane.md  distributed key-value stores.md  docs reference.md  end-to-end data flow.md  foundation.md  foundational architectural patterns.md  gateway api.md  gossip protocols.md  grafana.md  grpc vs other.md  grpc.md  helm.md  iam rbac.md  init containers.md  inter process communication.md  intrusion detection and prevention systems.md  iocd.md  ipsec.md  latest free cloud certifications.md  linux_kernel_security_cloud_native_guide.md  local certificate caching.md  microservices architecture.md  mitre att&ck.md  mtls.md  netfilter.md  networking and mesh.md  opentelemetry.md  overview.md  pixie.md  policy-as-code.md  prometheus.md  (+12 more)
codeFlow/: SDE and CyberSec Company List.txt  code safe.txt  job profile details.txt  typescript keywrds.md
codeflow/: coding properly.md  django-code-0.md  dsa-dayone.md
computer science/: Benchmarks.md  application binary interface.md  binary execution and memory loading.md  bits and bytes.md  bucket techniques.md  call by value and call by reference.md  cap theorem.md  clean code.md  competitive programming.md  compiler.md  concurrency patterns.md  confidential computing.md  cpu cycle.md  defense in depth.md  (+68 more)
linux/playground/ebpf/ebpf xdp/2/files/: Cargo.toml  Makefile  ROADMAP.md  main.rs  security_monitor.bpf.c  security_monitor.c  security_monitor.h  security_monitor_BUGGY.bpf.c  test_lsm_policy.sh
linux/playground/ebpf/ebpf xdp/2/files/mnt/user-data/outputs/ebpf-lsm/rust/userspace/src/: main.rs
(+1387 files in other folders)
